--- a/css/namari-color.css
+++ b/css/namari-color.css
@@ -125,7 +125,7 @@ a:hover, #header.nav-solid nav a:hover {
 
 #banner {
     /* Uncomment when a nice pic is found to replace */
-    /* background: url("../images/banner-images/banner-image-1.jpg") no-repeat center top;*/ 
+    background: url("../images/banner-images/banner-image.jpg") no-repeat center top;
     background-size:cover;
 }
 
