--- a/css/namari-color.css
+++ b/css/namari-color.css
@@ -22,27 +22,27 @@ body {
 /* Default Link Color */
 
 a, .la-ball-triangle-path {
-    color:#d2b356;
+    color:#95A5EE;
 }
 
 a:hover, #header.nav-solid nav a:hover {
-    color:#d2b356;
+    color:#95A5EE;
 }
 
 /* Default Icon Color */
 
 .icon i {
-    color:#d2b356;
+    color:#95A5EE;
 }
 
 /* Border Color */
 
 #banner .section-heading:before, .team-member.classic footer:before {
-    background: #d2b356;
+    background: #95A5EE;
 }
 
 .pricing-block-content:hover {
-    border-color:#d2b356;
+    border-color:#95A5EE;
 }
 
 
@@ -68,8 +68,8 @@ a:hover, #header.nav-solid nav a:hover {
 /* Navigation Active State */
 
 #header.nav-solid .active {
-    color: #d2b356;
-    border-color: #d2b356;
+    color: #95A5EE;
+    border-color: #95A5EE;
 }    
 
 
@@ -82,7 +82,7 @@ a:hover, #header.nav-solid nav a:hover {
 /* Primary Background and Text Colors */
 
 .primary-color, .featured .pricing {
-    background-color:#d2b356;
+    background-color:#95A5EE;
 }
 
 .primary-color, .primary-color .section-title, .primary-color .section-subtitle, .featured .pricing, .featured .pricing p {
@@ -90,7 +90,7 @@ a:hover, #header.nav-solid nav a:hover {
 }
 
 .section-heading h2:after {
-    background:#d2b356;
+    background:#95A5EE;
     content:"";
     display:block;
     width:30px;
@@ -280,8 +280,8 @@ h6 {
 /* Button Hover Color */
 
 .button:hover,  input[type="submit"]:hover {
-    border-color:#d2b356;
-    color:#d2b356;
+    border-color:#95A5EE;
+    color:#95A5EE;
 }
 
 
@@ -307,8 +307,8 @@ h6 {
 /* Button Hover Color */
 
 #banner .button:hover {
-    color:#d2b356;
-    border-color:#d2b356;
+    color:#95A5EE;
+    border-color:#95A5EE;
 }
 
 
