--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,17 @@
 .gallery-photo > a{
     margin: 10px 0;
 }
+
+ul {
+    list-style: none;
+}
+
+main {
+    padding-bottom: 100px;
+}
+
+.gym-list iframe {
+    width: 100%;
+    height: 400px;
+
+}
